--- a/flaskapp/app/pit_app/templates/results/protein.html
+++ b/flaskapp/app/pit_app/templates/results/protein.html
@@ -15,7 +15,7 @@
         </div>
 
       </li>
-      <li><a href="#summary"><i class="fa fa-dashboard fa-fw"></i> Summary</a></li>
+      <li><a href="#summary"><i class="fa fa-dashboard fa-fw"></i> TGEs</a></li>
     </ul>
     </div>
   </div>
@@ -23,7 +23,7 @@
   <div id="page-wrapper">
     <div class="row">
       <div class="col-lg-12">
-        <h1 class="page-header">Protein</h1>
+        <h1 class="page-header">Uniprot ID: {{ uniprot }}</h1>
       </div>
     </div>
 
@@ -31,11 +31,27 @@
       <div>
       	<div class="panel panel-default" id="summary">
           <div class="panel-heading">
-            <i class="fa fa-bar-chart-o fa-fw"></i> Summary
+            <i class="fa fa-bar-chart-o fa-fw"></i> TGEs
           </div>
           
           <div class="panel-body">
             <div class="row" style="margin-left:5px">
+            <table class="table table-striped table-bordered dataTable no-footer" class="searchRes">
+            <thead>
+              <tr>
+                <th>TGE Accession</th>
+                <th>TGE Type</th>
+              </tr>
+            </thead>
+            <tbody>
+              {% for tge in tges %}
+                <tr>
+                  <td>{{ tge.accession }}</td>
+                  <td>{{ tge.tge_class }}</td>
+                </tr>
+              {% endfor %}
+            </tbody>
+          </table>
           	</div>
           </div>
       </div>
@@ -43,4 +59,27 @@
   </div>
 </div>
 
+
+
+<script>
+alert("Test")
+var genoverseConfig = {
+  container : '#genoverse',
+  width         : 1366,
+  genome        : 'tomato',
+  plugins     : [ 'controlPanel', 'karyotype', 'trackControls', 'resizer', 'tooltips', 'fileDrop' ],
+  tracks        : [ Genoverse.Track.Scalebar, Genoverse.Track.extend({
+  name              : 'Fasta',
+  controller : Genoverse.Track.Controller.Sequence,
+  model           : Genoverse.Track.Model.Sequence.Fasta,
+  view              : Genoverse.Track.View.Sequence,
+  url               :
+  'http://genoverse.org/examples/tomato/data/Solanum_lycopersicum.SL2.40.18.dna.chromosome.__CHR__.fa',
+  resizable   : false,
+  30000           : false
+  }),
+  document.addEventListener('DOMContentLoaded', function () { window.genoverse = new
+  Genoverse(genoverseConfig); 
+});
+</script>
 {% endblock %}
