--- a/flaskapp/app/pit_app/templates/results/protein.html
+++ b/flaskapp/app/pit_app/templates/results/protein.html
@@ -36,7 +36,7 @@
           
           <div class="panel-body">
             <div class="row" style="margin-left:5px">
-            <table class="table table-striped table-bordered dataTable no-footer" class="searchRes">
+            <table id="proteinRes" class="table table-striped table-bordered dataTable no-footer" class="searchRes">
             <thead>
               <tr>
                 <th>TGE Accession</th>
@@ -55,31 +55,269 @@
           	</div>
           </div>
       </div>
+
+      <div>
+        <div class="panel panel-default" id="summary">
+          <div class="panel-heading">
+            <i class="fa fa-bar-chart-o fa-fw"></i> Genoverse
+          </div>
+          
+          <div class="panel-body">
+            <div id="genoverse"></div>
+          </div>
+      </div>
     </div>
   </div>
 </div>
 
+<script src="/static/js/ext/jquery-2.1.4.min.js"></script>
 
+<script type="text/javascript" src="/static/js/genoverse.combined.js"></script>
+<script type="text/javascript" src="/static/js/genomes/grch38.js"></script>
+<script type="text/javascript" src="/static/js/Track/Model/Transcript/GFF3.js"></script>
+<script type="text/javascript" src="/static/js/plugins/fileDrop.js"></script>
+<script type="text/javascript" src="/static/js/Track/View/Transcript.js"></script>
+<script type="text/javascript" src="/static/js/Track/View/Gene/Ensembl.js"></script>
+<script type="text/javascript" src="/static/js/Track/View/Transcript/Ensembl.js"></script>
+<script type="text/javascript" src="/static/js/Track/View.js"></script>
 
 <script>
-alert("Test")
-var genoverseConfig = {
-  container : '#genoverse',
-  width         : 1366,
-  genome        : 'tomato',
-  plugins     : [ 'controlPanel', 'karyotype', 'trackControls', 'resizer', 'tooltips', 'fileDrop' ],
-  tracks        : [ Genoverse.Track.Scalebar, Genoverse.Track.extend({
-  name              : 'Fasta',
-  controller : Genoverse.Track.Controller.Sequence,
-  model           : Genoverse.Track.Model.Sequence.Fasta,
-  view              : Genoverse.Track.View.Sequence,
-  url               :
-  'http://genoverse.org/examples/tomato/data/Solanum_lycopersicum.SL2.40.18.dna.chromosome.__CHR__.fa',
-  resizable   : false,
-  30000           : false
-  }),
-  document.addEventListener('DOMContentLoaded', function () { window.genoverse = new
-  Genoverse(genoverseConfig); 
-});
+  var chrParam = getParam("seqid");
+  
+  if (chrParam == null || chrParam == '') {
+    chrParam = 2;
+  }
+
+  var genoverseConfig = {
+    container : '#genoverse',
+    width     : 900,
+    genome    : 'grch38',
+    chr       : chrParam,
+    start     : 215350030,
+    end       : 215436000,
+    plugins   : [ 'controlPanel', 'karyotype', 'trackControls', 'resizer', 'fileDrop' ],
+    tracks    : [
+      Genoverse.Track.Scalebar,
+      Genoverse.Track.extend({
+        name      : 'Sequence',
+        model     : Genoverse.Track.Model.Sequence.Ensembl,
+        view      : Genoverse.Track.View.Sequence,
+        resizable : 'auto',
+        100000    : false
+      }),
+      Genoverse.Track.extend({
+        name   : 'Genes',
+        height : 200,
+        info   : 'Ensembl API genes & transcripts, see <a href="http://beta.rest.ensembl.org/" target="_blank">beta.rest.ensembl.org</a> for more details',
+        
+        // Different settings for different zoom level
+        2000000: { // This one applies when > 2M base-pairs per screen
+          labels : false
+        },
+        100000: { // more than 100K but less then 2M
+          labels : true,
+          model  : Genoverse.Track.Model.Gene.Ensembl,
+          view   : Genoverse.Track.View.Gene.Ensembl
+        },
+        1: { // > 1 base-pair, but less then 100K
+          labels : true,
+          model  : Genoverse.Track.Model.Transcript.Ensembl,
+          view   : Genoverse.Track.View.Transcript.Ensembl
+        }
+      }),
+      Genoverse.Track.extend({
+        name   : 'Transcript',
+        height : 300,
+        url    : '/data/test',
+        model  : Genoverse.Track.Model.extend({
+          dataType : 'text',
+          typeMap : {
+            exon  : 'exon',
+            cds   : 'cds'
+          },
+          parseData: function (text) {
+
+            var lines = text.split('\n');
+
+            for (var i = 0; i < lines.length; i++) {
+              if (!lines[i].length || lines[i].indexOf('#') === 0) {
+                continue;
+              }
+
+              var fields = lines[i].replace(/\s{2,}/g, '\t').split('\t');
+              
+              if (fields[0] === this.browser.chr || fields[0].toLowerCase() === 'chr' + this.browser.chr || fields[0].match('[^1-9]' + this.browser.chr + '$')) {
+                
+                var feature = {};
+
+                feature.id     = fields.slice(0, 5).join('|');
+                feature.start  = parseInt(fields[3], 10);
+                feature.end    = parseInt(fields[4], 10);
+                feature.source = fields[1];
+                feature.type   = fields[2];
+                feature.score  = fields[5];
+                feature.strand = fields[6] + '1';
+
+                if (fields[8]) {
+                  var frame = fields[8].split(';');
+
+                  for (var j = 0; j < frame.length; j++) {
+                    var keyValue = frame[j].split('=');
+
+                    if (keyValue.length === 2) {
+                      feature[keyValue[0].toLowerCase()] = keyValue[1];
+                    }
+                  }
+                }
+
+                // sub-feature came earlier than parent feature
+                if (feature.parent && feature.type == "mRNA") {
+                  this.insertFeature(feature);
+
+                  this.featuresById[feature.id] = {
+                    exons : [],
+                    cds   : []
+                  };
+                }
+
+
+                // If happiness
+                if (feature.parent && feature.type.toLowerCase() === this.typeMap.exon.toLowerCase()) {
+                  if (!$.grep(this.featuresById[feature.parent].exons, function (exon) { return exon.id === feature.id; }).length) {
+                    this.featuresById[feature.parent].exons.push(feature);
+                  }
+                  //this.insertFeature(feature);
+                } else if (feature.parent && feature.type.toLowerCase() === this.typeMap.cds.toLowerCase()) {
+                  if (!$.grep(this.featuresById[feature.parent].cds, function (exon) { return exon.id === feature.id; }).length) {
+                    this.featuresById[feature.parent].cds.push(feature);
+                  }
+                  //this.insertFeature(feature);
+                } else if (!feature.parent) {
+                  feature.label = feature.name || feature.id || '';
+                  $.extend(feature, { label: feature.name || feature.id || '', exons: [], cds: [] }, this.featuresById[feature.id] || {});
+
+                  delete this.featuresById[feature.id];
+
+                  this.insertFeature(feature);
+                } // end of if
+              }
+            }
+            // alert(feature.parent);
+            // alert(this.featuresById[feature.parent].exons.length);
+            // alert(this.featuresById[feature.parent].cds.length);
+            // return;
+          }
+        }),
+        view   : Genoverse.Track.View.Transcript,
+      }), 
+      // Genoverse.Track.extend({
+      //   name      : 'GFF3',
+      //   height    : 200,
+      //   model     : Genoverse.Track.Model.Transcript.GFF3,
+      //   view      : Genoverse.Track.View.Transcript,
+      //   resizable : 'false',
+      //   url       : '/data/test',
+      //   // 2000000: { // This one applies when > 2M base-pairs per screen
+      //   //   labels : false
+      //   // },
+      //   // 100000: { // more than 100K but less then 2M
+      //   //   labels : true,
+      //   //   view   : Genoverse.Track.View.Transcript
+      //   // },
+      //   // 1: { // > 1 base-pair, but less then 100K
+      //   //   labels : true,
+      //   //   view   : Genoverse.Track.View.Transcript.Ensembl
+      //   // }
+      // }),
+      // Genoverse.Track.extend({
+      //   name   : 'Shyama',
+      //   view   : Genoverse.Track.View.Transcript.extend({
+      //     setFeatureColor : function () {}
+      //   }),
+      //   height : 100,
+      //   url    : '/data/test',
+      //   model  : Genoverse.Track.Model.extend({
+      //     dataType : 'text',
+      //     parseData: function (text) {
+      //       var lines = text.split('\n');
+      //       for (var i = 0; i < lines.length; i++) {
+
+      //         if (!lines[i].length || lines[i].indexOf('#') === 0) {
+      //           continue;
+      //         }
+              
+      //         var fields = lines[i].split('\t');
+
+      //         if (fields[0] === this.browser.chr || fields[0].toLowerCase() === 'chr' + this.browser.chr || fields[0].match('[^1-9]' + this.browser.chr + '$')) {
+
+      //           var feature = {
+      //             id     : fields.slice(0, 5).join('|'),
+      //             start  : parseInt(fields[3], 10),
+      //             end    : parseInt(fields[4], 10),
+      //             exons  : [],
+      //             cds    : []
+      //           };
+
+      //           if (fields[8]) {
+      //             var extraFields = fields[8].split(';');
+                  
+      //             for (var j = 0; j < extraFields.length; j++) {
+      //               var keyValue = extraFields[j].split('=');
+                    
+      //               if (keyValue.length === 2 && !feature[keyValue[0]]) {
+      //                 feature[keyValue[0].toLowerCase()] = keyValue[1];
+      //               }
+      //             }
+      //           }
+
+      //           feature.color = 'rgb(' + feature.color + ')';
+
+      //           // CIGAR Gap, here we assume it's always M or D, with D only being surrounded with Ms
+      //           if (feature.gap) {
+      //             var cursor = feature.start;
+      //             var chunks = feature.gap.split(' ');
+      //             for (var j=0; j<chunks.length; j++) {
+      //               if (chunks[j].charAt(0) === 'M') {
+      //                 var length = parseInt( chunks[j].substr(1), 10 );
+      //                 feature.exons.push({
+      //                   start : cursor,
+      //                   end   : cursor + length,
+      //                 });
+      //                 feature.cds.push({
+      //                   start : cursor,
+      //                   end   : cursor + length,
+      //                   color : feature.color,
+      //                 });
+      //                 cursor = cursor + length;
+      //               }
+      //               else {
+      //                 var length = parseInt(chunks[j].substr(1), 10);
+      //                 cursor += length;
+      //               }
+      //             }
+      //           }
+
+      //           feature.labelColor = 'black';
+      //           feature.label = feature.name;
+
+      //           this.insertFeature(feature);
+      //         }
+
+      //       }
+      //     }
+      //   }),
+      // })
+    ]
+  };
+  
+  document.addEventListener('DOMContentLoaded', function () { 
+    window.genoverse = new Genoverse(genoverseConfig); 
+  });
+
+  function getParam(name){
+    if(name=(new RegExp('[?&]'+encodeURIComponent(name)+'=([^&]*)')).exec(location.search))
+      return decodeURIComponent(name[1]);
+  }
 </script>
+
 {% endblock %}
