--- a/pit_app/templates/results/protein.html
+++ b/pit_app/templates/results/protein.html
@@ -156,7 +156,7 @@
         name   : 'GFF3',
         height : 400,
         //info   : 'Ensembl API genes & transcripts, see <a href="http://beta.rest.ensembl.org/" target="_blank">beta.rest.ensembl.org</a> for more details',
-        url : '/data/'+"{{ uniprot }}",
+        url : '/genoverse/'+"{{ uniprot }}",
         //info   : 'Ensembl API genes & transcripts, see <a href="http://beta.rest.ensembl.org/" target="_blank">beta.rest.ensembl.org</a> for more details',
         view   : Genoverse.Track.View.Transcript.extend({
                 setFeatureColor : function () {}
