New sunburst layer for organism in protein view

--- a/pit_app/templates/results/protein.html
+++ b/pit_app/templates/results/protein.html
@@ -25,7 +25,7 @@
           <i class="fa fa-pie-chart fa-fw"></i> Graph
         </div>
 
-        <span><p><h5 style="margin-left: 15px; padding-top: 10px">Graph of organism breakdown</h5></p></span>
+        <span><p><h5 style="margin-left: 15px; padding-top: 10px">Graph of TGE breakdown</h5></p></span>
         <div class="col-md-8 col-md-offset-2">
           <div id="sequence"></div>
           <div id="chart">
