--- a/pit_app/templates/results/peptide.html
+++ b/pit_app/templates/results/peptide.html
@@ -1,4 +1,96 @@
 {% extends "layoutPlots.html" %}
 {% block content %}
+  
+<div class="navbar-default sidebar" role="navigation">
+  <div class="sidebar-nav navbar-collapse">
+    <ul class="nav" id="side-menu">
+      <li><h5>Navigation Panel</h5></li>
+      <li><a href="#pepSummary"><i class="fa fa-comment-o fa-fw"></i> Summary</a></li>
+      <li><a href="#pepGraph"><i class="fa fa-pie-chart fa-fw"></i> Graph</a></li>
+      <li><a href="#pepBreakdown"><i class="fa fa-bars fa-fw"></i> Peptide breakdown</a></li>
+    </ul>
+  </div>
+</div>
+
+<div id="page-wrapper">
+  <div class="row">
+    <div class="col-lg-12">
+      <h1 class="page-header">Peptide </h1>
+    </div>
+  </div>
+
+  <div class="row">
+  	<div id="pepSummary" class="panel panel-default" style="position: relative !important;">
+      <div class="panel-heading">
+        <i class="fa fa-bar-chart-o fa-fw"></i> Summary
+      </div>
+      
+      <div class="panel-body">
+        <div class="row" style="margin-left:5px">
+        <h5 padding-bottom: 10px>Peptide Sequence: </h5> <span style="font-size: 19px; font-style: italic; font-family: Serif, Times New Roman, Georgia; color: gray">{{ peptide.aa_seq }} </span><br/> <br/>
+        <h5>Number of instances for:</h5>
+          <label>TGEs:</label>   </br>
+          <label>Samples:</label>  </br>
+          <label>Experiments:</label> </br>
+          <label>Transcripts:</label>  <br/>
+          <label>Peptides: </label> 
+      	</div>
+      </div>
+    </div>
+
+    <div id="pepGraph" class="panel panel-default sunburst" style="position: relative !important;">
+      <div class="panel-heading">
+        <i class="fa fa-pie-chart fa-fw"></i> Graph
+      </div>
+
+      <span><p><h5 style="margin-left: 15px; padding-top: 10px">Graph of peptide breakdown</h5></p></span>
+      <div class="col-md-8 col-md-offset-2">
+        <div id="sequence"></div>
+        <div id="chart">
+          <div id="explanation">
+            <span id="percentage"><i class="fa fa-spinner fa-spin fa-3x fa-fw"></i><span class="sr-only">Loading...</span></span>
+          </div>
+        </div>
+      </div>
+      <div style="clear: both;"></div>
+    </div>
+
+    <div>
+    	<div class="panel panel-default" id="pepBreakdown">
+        <div class="panel-heading">
+          <i class="fa fa-bars fa-fw"></i> Peptide breakdown
+        </div>
+        
+        <div class="panel-body">
+
+          <!-- <table class="table table-striped table-bordered dataTable no-footer" id = "pepTable">
+          <thead>
+            <tr>
+              <th>TGE Accession</th>
+              <th>TGE Type(s)</th>
+              <th>Uniprot ID(s)</th>
+            </tr>
+          </thead>
+          <tbody>
+            {% for tge in tgeList %}
+              <tr>
+                <td>
+                <a href="tge?accession={{ tge.accession }}" target="_blank">{{ tge.accession }}</a>
+                </td>
+                <td>{{ tge.tgeClasses }}</td>
+                <td>
+                {% set uniprotIDs = tge.uniprotIDs.split(',') %}
+                {% for uniprotID in uniprotIDs %}
+                  <a href="protein?uniprot={{ uniprotID }}" target="_blank">{{ uniprotID }}</a>{% if not loop.last %}, {% endif %}
+                {% endfor %}
+                </td>
+              </tr>
+            {% endfor %}
+          </tbody> -->
+        </table>
+      </div>
+    </div>
+  </div>
+</div>
 
 {% endblock %}
