--- a/pit_app/templates/results/peptide.html
+++ b/pit_app/templates/results/peptide.html
@@ -1,4 +1,4 @@
-{% extends "layoutPlots.html" %}
+{% extends "layout.html" %}
 {% block content %}
   
 <div class="navbar-default sidebar" role="navigation">
