--- a/pit_app/templates/results/protein.html
+++ b/pit_app/templates/results/protein.html
@@ -1,78 +1,80 @@
-{% extends "layoutPlots.html" %}
+{% extends "layout.html" %}
 {% block content %}
   
-<div class="navbar-default sidebar" role="navigation">
-  <div class="sidebar-nav navbar-collapse">
-    <ul class="nav" id="side-menu">
-      <li><h5>Navigation Panel</h5></li>
-      <li><a href="#protGraph"><i class="fa fa-pie-chart fa-fw"></i> Graph</a></li>
-      <li><a href="#protSummary"><i class="fa fa-comment-o fa-fw"></i> TGEs</a></li>
-      <li><a href="#genoGraph"><i class="fa fa fa-picture-o fa-fw"></i> Genoverse</a></li>
-    </ul>
-    </div>
-  </div>
-
-  <div id="page-wrapper">
-    <div class="row">
-      <div class="col-lg-12">
-        <h1 class="page-header">Uniprot ID: <a href="http://www.uniprot.org/uniprot/{{ genoverse.uniprot }}" target="_blank">{{ genoverse.uniprot }}</a></h1>
+<div class="container">
+  <div class="navbar-default sidebar" role="navigation">
+    <div class="sidebar-nav navbar-collapse">
+      <ul class="nav" id="side-menu">
+        <li><h5>Navigation Panel</h5></li>
+        <li><a href="#protGraph"><i class="fa fa-pie-chart fa-fw"></i> Graph</a></li>
+        <li><a href="#protSummary"><i class="fa fa-comment-o fa-fw"></i> TGEs</a></li>
+        <li><a href="#genoGraph"><i class="fa fa fa-picture-o fa-fw"></i> Genomic context</a></li>
+      </ul>
       </div>
     </div>
 
-    <div class="row">
-      <div id="protGraph" class="panel panel-default sunburst" style="position: relative !important;">
-        <div class="panel-heading">
-          <i class="fa fa-pie-chart fa-fw"></i> Graph
+    <div id="page-wrapper">
+      <div class="row">
+        <div class="col-lg-12">
+          <h1 class="page-header">Uniprot ID: <a href="http://www.uniprot.org/uniprot/{{ genoverse.uniprot }}" target="_blank">{{ genoverse.uniprot }}</a></h1>
         </div>
+      </div>
 
-        <span><p><h5 style="margin-left: 15px; padding-top: 10px">Graph of TGE breakdown</h5></p></span>
-        <div class="col-md-8 col-md-offset-2">
-          <div id="sequence"></div>
-          <div id="chart">
-            <div id="explanation">
-              <span id="percentage"><i class="fa fa-spinner fa-spin fa-3x fa-fw"></i><span class="sr-only">Loading...</span></span>
+      <div class="row">
+        <div id="protGraph" class="panel panel-default sunburst" style="position: relative !important;">
+          <div class="panel-heading">
+            <i class="fa fa-pie-chart fa-fw"></i> Graph
+          </div>
+
+          <span><p><h5 style="margin-left: 15px; padding-top: 10px">Graph of TGE breakdown</h5></p></span>
+          <div class="col-md-8 col-md-offset-2">
+            <div id="sequence"></div>
+            <div id="chart">
+              <div id="explanation">
+                <span id="percentage"><i class="fa fa-spinner fa-spin fa-3x fa-fw"></i><span class="sr-only">Loading...</span></span>
+              </div>
             </div>
           </div>
+          <div style="clear: both;"></div>
         </div>
-        <div style="clear: both;"></div>
-      </div>
 
-    	<div class="panel panel-default" id="protSummary">
-        <div class="panel-heading">
-          <i class="fa fa-comment-o fa-fw"></i> TGEs
-        </div>
-        
-        <div class="panel-body">
-          <div class="row" style="margin-left:5px">
-            <table id="proteinRes" class="table table-striped table-bordered dataTable no-footer" class="searchRes">
-            <thead>
-              <tr>
-                <th>TGE Accession</th>
-                <th>TGE Type</th>
-              </tr>
-            </thead>
-            <tbody>
-              {% for tge in tges %}
+      	<div class="panel panel-default" id="protSummary">
+          <div class="panel-heading">
+            <i class="fa fa-comment-o fa-fw"></i> TGEs
+          </div>
+          
+          <div class="panel-body">
+            <div class="row" style="margin-left:5px">
+              <table id="proteinRes" class="table table-striped table-bordered dataTable no-footer" class="searchRes">
+              <thead>
                 <tr>
-                  <td><a href="tge?accession={{ tge.accession }}" target="_blank">{{ tge.accession }}</a></td>
-                  <td>{{ tge.tge_class }}</td>
+                  <th>TGE Accession</th>
+                  <th>TGE Type</th>
                 </tr>
-              {% endfor %}
-            </tbody>
-          </table>
+              </thead>
+              <tbody>
+                {% for tge in tges %}
+                  <tr>
+                    <td><a href="tge?accession={{ tge.accession }}" target="_blank">{{ tge.accession }}</a></td>
+                    <td>{{ tge.tge_class }}</td>
+                  </tr>
+                {% endfor %}
+              </tbody>
+            </table>
+          </div>
         </div>
       </div>
-    </div>
 
-    <div>
-      <div class="panel panel-default" id="genoGraph">
-        <div class="panel-heading">
-          <i class="fa fa fa-picture-o fa-fw"></i> Genoverse
-        </div>
-        
-        <div class="panel-body">
-          <div id="genoverse"></div>
-        </div>
+      <div>
+        <div class="panel panel-default" id="genoGraph">
+          <div class="panel-heading">
+            <i class="fa fa fa-picture-o fa-fw"></i> Genomic context
+          </div>
+          
+          <div class="panel-body">
+            <div id="genoverse"></div>
+          </div>
+      </div>
     </div>
   </div>
 </div>
@@ -151,7 +153,7 @@
         }
       }),
       Genoverse.Track.extend({
-        name   : 'GFF3',
+        name   : 'ORFs',
         height : 400,
         //info   : 'Ensembl API genes & transcripts, see <a href="http://beta.rest.ensembl.org/" target="_blank">beta.rest.ensembl.org</a> for more details',
         url : '/genoverse/'+"{{ genoverse.uniprot }}",
